# coeus

./: .gitignore  .mcp.json  README.md  pyproject.toml
.claude/agents/: coeus.md
.claude/skills/architect/: SKILL.md
src/coeus/: __init__.py  server.py
src/coeus/knowledge/: api_and_data.json  architecture_patterns.json  decision_rules.json  graph_loader.py  loader.py  scalability_patterns.json
src/coeus/tools/: _shared.py  analyze_architecture.py  assess_resilience.py  design_api.py  evaluate_scalability.py  log_decision.py  recommend_pattern.py
tests/: conftest.py  test_knowledge.py  test_tools.py
