[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coeus"
version = "0.1.0"
description = "Coeus — Architecture Titan. System design, scalability, distributed systems, API architecture, resilience."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Reza Malik" }]
dependencies = [
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
graph = ["real-ladybug>=0.15.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "real-ladybug>=0.15.0",
]

[project.scripts]
coeus = "coeus.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/coeus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
